--- a/src/app/components/search-form/search-form.component.html
+++ b/src/app/components/search-form/search-form.component.html
@@ -1,6 +1,254 @@
 <div name="searchFlight" id="searchFlight">
     <fieldset id="search">
-        search form
+        <div class="inline">
+            <mat-form-field>
+                <mat-label>Company</mat-label>
+                <mat-select>
+                    <mat-option></mat-option>
+                    <mat-option>AIR fRANCE</mat-option>
+                    <mat-option>AIR EMIRATE</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="inline">
+            <div class="left">
+                <mat-form-field class="left">
+                    <mat-label>Trip</mat-label>
+                    <mat-select>
+                        <mat-option></mat-option>
+                        <mat-option>One-way ticket</mat-option>
+                        <mat-option>Round trip</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field class="right">
+                    <mat-label>Flight Type</mat-label>
+                    <mat-select>
+                        <mat-option></mat-option>
+                        <mat-option>Direct Flight</mat-option>
+                        <mat-option>Connecting Flight</mat-option>
+
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div class="right">
+                <mat-form-field>
+                    <input matInput placeholder="Aircraft type">
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="inline">
+            <div class="left">
+                <mat-form-field>
+                    <input matInput placeholder="Departing From">
+                </mat-form-field>
+                <mat-icon>flight_takeoff</mat-icon>
+            </div>
+            <div class="right">
+                <mat-icon>flight_land</mat-icon>
+                <mat-form-field>
+                    <input matInput placeholder="Arriving At">
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="inline">
+            <div class="left">
+
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Departing date min</mat-label>
+                        <input matInput [matDatepicker]="deparMin">
+                        <mat-datepicker-toggle matSuffix [for]="deparMin"></mat-datepicker-toggle>
+                        <mat-datepicker #deparMin></mat-datepicker>
+                    </mat-form-field>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Departing date max</mat-label>
+                        <input matInput [matDatepicker]="deparMax">
+                        <mat-datepicker-toggle matSuffix [for]="deparMax"></mat-datepicker-toggle>
+                        <mat-datepicker #deparMax></mat-datepicker>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="right">
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Departing time min</mat-label>
+                        <input matInput [ngxTimepicker]="deparTimeMin" [disableClick]="true" [format]="24" readonly
+                            formControlName="departureTimeMin">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="deparTimeMin">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #deparTimeMin>
+                    </ngx-material-timepicker>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Departing time max</mat-label>
+                        <input matInput [ngxTimepicker]="deparTimeMax" [disableClick]="true" [format]="24" readonly
+                            formControlName="departureTimeMax">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="deparTimeMax">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #deparTimeMax></ngx-material-timepicker>
+                </div>
+            </div>
+
+        </div>
+        <div class="inline">
+            <div class="left">
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Arriving date min</mat-label>
+                        <input matInput [matDatepicker]="picker2" formControlName="arrivalDateMin">
+                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker2></mat-datepicker>
+                    </mat-form-field>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Arriving date max</mat-label>
+                        <input matInput [matDatepicker]="picker3" formControlName="arrivalDateMax">
+                        <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                        <mat-datepicker #picker3></mat-datepicker>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="right">
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Arriving time min</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker2" [disableClick]="true" [format]="24" readonly
+                            formControlName="arrivalTimeMin">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker2">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker2></ngx-material-timepicker>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Arriving time max</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker3" [disableClick]="true" [format]="24" readonly
+                            formControlName="arrivalTimeMax">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker3">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker3></ngx-material-timepicker>
+                </div>
+            </div>
+        </div>
+        <div class="inline">
+            <div class="left">
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Flight duration min</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker5" [disableClick]="true" [format]="24" readonly
+                            formControlName="flightDurationMin">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker5">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker5></ngx-material-timepicker>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Flight duration max</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker6" [disableClick]="true" [format]="24" readonly
+                            formControlName="flightDurationMax">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker6">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker6></ngx-material-timepicker>
+                </div>
+            </div>
+            <div class="right">
+                <div class="left">
+                    <mat-form-field>
+                        <input matInput placeholder="Fare min" formControlName="fareMin">
+                    </mat-form-field>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <input matInput placeholder="Fare max" formControlName="fareMax">
+                    </mat-form-field>
+                </div>
+            </div>
+        </div>
+        <div class="inline">
+            <div class="left">
+
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Back date min</mat-label>
+                        <input matInput [matDatepicker]="picker4" formControlName="backDateMin">
+                        <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
+                        <mat-datepicker #picker4></mat-datepicker>
+                    </mat-form-field>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Back date max</mat-label>
+                        <input matInput [matDatepicker]="picker5" formControlName="backDateMax">
+                        <mat-datepicker-toggle matSuffix [for]="picker5"></mat-datepicker-toggle>
+                        <mat-datepicker #picker5></mat-datepicker>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="right">
+                <div class="left">
+                    <mat-form-field>
+                        <mat-label>Back time min</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker4" [disableClick]="true" [format]="24" readonly
+                            formControlName="backTimeMin">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker4">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker4></ngx-material-timepicker>
+                </div>
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Back time max</mat-label>
+                        <input matInput [ngxTimepicker]="toggleTimepicker9" [disableClick]="true" [format]="24" readonly
+                            formControlName="backTimeMax">
+                    </mat-form-field>
+                    <ngx-material-timepicker-toggle [for]="toggleTimepicker9">
+                    </ngx-material-timepicker-toggle>
+                    <ngx-material-timepicker #toggleTimepicker9></ngx-material-timepicker>
+                </div>
+            </div>
+
+        </div>
+        <div class="inline">
+            <div class="left">
+                <mat-form-field>
+                    <mat-label>Connection duration min</mat-label>
+                    <input matInput [ngxTimepicker]="toggleTimepicker7" [disableClick]="true" [format]="24" readonly
+                        formControlName="connectionDurationMin">
+                </mat-form-field>
+                <ngx-material-timepicker-toggle [for]="toggleTimepicker7"></ngx-material-timepicker-toggle>
+                <ngx-material-timepicker #toggleTimepicker7></ngx-material-timepicker>
+            </div>
+            <div class="right">
+                <mat-form-field>
+                    <mat-label>Connection duration max</mat-label>
+                    <input matInput [ngxTimepicker]="toggleTimepicker8" [disableClick]="true" [format]="24" readonly
+                        formControlName="connectionDurationMax">
+                </mat-form-field>
+                <ngx-material-timepicker-toggle [for]="toggleTimepicker8"></ngx-material-timepicker-toggle>
+                <ngx-material-timepicker #toggleTimepicker8></ngx-material-timepicker>
+            </div>
+        </div>
+        <div id="buttonBar">
+            <p class="firstRight">
+                <button mat-raised-button color="primary">
+                    <mat-icon>search</mat-icon> Find a flight
+                </button>
+            </p>
+            <p class="nextRight">
+                <button mat-raised-button>Cancel</button>
+            </p>
+        </div>
     </fieldset>
 
 </div>
