--- a/src/styles.css
+++ b/src/styles.css
@@ -30,5 +30,9 @@ display:flex;
 	float:right;
 	text-align:left;
 }
+
+table {
+    width: 100%;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
