--- a/src/app/flights/pages/flights/flight-page/flight-page.component.html
+++ b/src/app/flights/pages/flights/flight-page/flight-page.component.html
@@ -1,9 +1,23 @@
 <div id="mainContainer">
-<app-left-side></app-left-side>
-<div id="mainMargin">
-    <div id="main">
-<app-search-form></app-search-form>
-<app-flights-list></app-flights-list>
+    <app-left-side></app-left-side>
+    <div id="mainMargin">
+        <div id="main">
+            <div id="mainBanner">
+                <h3>Search flight</h3>
+                <p>
+                    <span (click)="hideSearchForm()">
+                        <mat-icon *ngIf="isHidden">expand_more</mat-icon>
+                        <mat-icon *ngIf="!isHidden">expand_less</mat-icon>
+
+                    </span>
+                </p>
+
+            </div>
+            <div [ngStyle]="{'display':isHidden? 'none':'inherit'}">
+                <app-search-form></app-search-form>
+            </div>
+            <app-flights-list></app-flights-list>
+        </div>
+    </div>
 </div>
-</div>
-</div>
+<app-bot-side></app-bot-side>
