--- a/src/app/portal/left-side/left-side.component.html
+++ b/src/app/portal/left-side/left-side.component.html
@@ -1,3 +1,16 @@
+<div id="Lang">
+    <mat-form-field>
+        <mat-label>Language</mat-label>
+        <mat-select >
+            <mat-option value="en_US">
+                English
+            </mat-option>
+            <mat-option value="fr_FR">
+                French
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
 <div id="menu">
     <ul class="menu">
         <li>
