--- a/src/app/flights/pages/flights/flight-page/flight-page.component.html
+++ b/src/app/flights/pages/flights/flight-page/flight-page.component.html
@@ -3,7 +3,7 @@
     <div id="mainMargin">
         <div id="main">
             <div id="mainBanner">
-                <h3>Search flight</h3>
+                <h3>{{'searchFlightForm.header.label' | translate}}</h3>
                 <p>
                     <span (click)="hideSearchForm()">
                         <mat-icon *ngIf="isHidden">expand_more</mat-icon>
