--- a/src/app/flights/pages/flights/flight-page/flight-page.component.html
+++ b/src/app/flights/pages/flights/flight-page/flight-page.component.html
@@ -15,8 +15,13 @@
             </div>
             <div [ngStyle]="{'display':isHidden? 'none':'inherit'}">
                 <app-search-form (onsearch)="searchFlights($event)"></app-search-form>
-            </div>
-            <app-flights-list [flights]="flightsData"></app-flights-list>
+            </div >
+            <div *ngIf="loading" id="loader">
+            <mat-spinner></mat-spinner>
+        </div>
+            <div *ngIf="show">
+            <app-flights-list *ngIf="!loading" [flights]="flightsData"></app-flights-list>
+        </div>
         </div>
     </div>
 </div>
