--- a/src/app/flights/components/flights-list/flights-list.component.html
+++ b/src/app/flights/components/flights-list/flights-list.component.html
@@ -1,4 +1,6 @@
+<div class="paginator">
 <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
 <div class="mat-elevation-z8" id="flights">
 <table mat-table matTableExporter [dataSource]="flights" matSort #exporter="matTableExporter">
     <!-- idFlight Column -->
