--- a/src/app/portal/left-side/left-side.component.html
+++ b/src/app/portal/left-side/left-side.component.html
@@ -19,12 +19,12 @@
             </a>
         </li>
         <li>
-            <a>
+            <a (click)="flightspage()">
                 <mat-icon class="leftIcon">flight</mat-icon> Flights
             </a>
         </li>
         <li>
-            <a>
+            <a (click)="bookmarkspage()">
                 <mat-icon class="leftIcon">bookmark</mat-icon> Synthesis
             </a>
         </li>
