--- a/src/app/portal/left-side/left-side.component.html
+++ b/src/app/portal/left-side/left-side.component.html
@@ -40,7 +40,7 @@
             </a>
         </li>
         <li>
-            <a>
+            <a (click)="logout()">
                 <mat-icon class="leftIcon">power_settings_new</mat-icon> Logout
             </a>
         </li>
