--- a/src/app/flights/pages/bookmarks/bookmarkslist/bookmarkslist.component.html
+++ b/src/app/flights/pages/bookmarks/bookmarkslist/bookmarkslist.component.html
@@ -1,7 +1,7 @@
 <div class="paginator">
     <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
-<div id="flights">
+<div id="flights" [@listAnimation]="bookmarks.data.length">
     <table mat-table [dataSource]="bookmarks" matSort>
 
         <!-- idFlight Column -->
@@ -33,12 +33,25 @@
             <th mat-header-cell *matHeaderCellDef>view</th>
             <td mat-cell *matCellDef="let bookmark">
                 <div id="details">
-                    <a (click)="viewBookmark(bookmark.idBookmar)">
-                        <mat-icon >assignment</mat-icon>
+                    <a (click)="viewBookmark(bookmark.idBookmark)">
+                        <mat-icon>assignment</mat-icon>
+                    </a>
+                    <a (click)="openDialogueWithRef(delBookmark)">
+                        <mat-icon>delete</mat-icon>
                     </a>
                 </div>
+                <ng-template #delBookmark>
+                    <h3 matDialogTitle>Delete Bookmark</h3>
+                    <mat-icon>help</mat-icon>
+                    <mat-label> Are you sure</mat-label>
+                    <mat-dialog-actions align="end">
+                        <button mat-button matDialogClose class="btnDialog" (click)="deleteBookmark(bookmark)">yes</button>
+                        <button mat-button matDialogClose>Cancel</button>
+                    </mat-dialog-actions>
+                </ng-template>
             </td>
         </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
