--- a/src/styles.css
+++ b/src/styles.css
@@ -657,7 +657,7 @@ DIV.t-error LI {
 }
 
 .blue-snackbar {
-    background: var(--firstColor);
+    background:#3f51b5;
     color: white !important;
     border-radius: 8px !important;
     min-width: fit-content !important;
