--- a/src/app/flights/pages/bookmarks/bookmarkslist/bookmarkslist.component.html
+++ b/src/app/flights/pages/bookmarks/bookmarkslist/bookmarkslist.component.html
@@ -56,7 +56,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <div align="center" *ngIf="bookmarks.data.length===0">
-        No Bokkmark found!
+        No Bookmark found!
     </div>
 </div>
 <div id="mainBanner">
