partie: Sharing data between child and parent components

--- a/src/app/portal/left-side/left-side.component.html
+++ b/src/app/portal/left-side/left-side.component.html
@@ -25,7 +25,12 @@
         </li>
         <li>
             <a (click)="bookmarkspage()">
-                <mat-icon class="leftIcon">bookmark</mat-icon> Synthesis
+                <mat-icon class="leftIcon">bookmark</mat-icon> Bookmark
+            </a>
+        </li>
+        <li>
+            <a >
+                <mat-icon class="leftIcon">pie_chart</mat-icon> Synthesis
             </a>
         </li>
         
