--- a/src/app/flights/synthesis/synthesis.component.html
+++ b/src/app/flights/synthesis/synthesis.component.html
@@ -1,1 +1,43 @@
-<p>synthesis works!</p>
+<div id="mainContainer">
+    <app-left-side></app-left-side>
+    <div id="mainMargin">
+
+        <div id="main">
+
+            <div id="mainBanner">
+                <h3>Synthesis</h3>
+                <p>
+
+                </p>
+            </div>
+            <div>
+                <app-synthesis-criteria (onSearch)="dosynthesis($event)"></app-synthesis-criteria>
+            </div>
+
+            <div *ngIf="show">
+                <div *ngIf="loading" id="loader">
+                    <img src="../../../assets/imgs/ajax-wait.gif">
+                </div>
+                <div id="mainBanner">
+                    <h3>Flight synthesis</h3>
+                </div>
+                <div>
+                    <app-synthesis-flights *ngIf="!loading" [nbrFlights]="nbFlights"
+                        [synthesisCriteria]="synthesisCriteria"></app-synthesis-flights>
+                </div>
+            </div>
+            <div id="mainBanner" *ngIf="show">
+                <h3>synthesis companies</h3>
+
+            </div>
+            <div *ngIf="show">
+                <app-synthesis-company [synthesisCompanies]="synthesisCompanies"></app-synthesis-company>
+
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
+<app-bot-side></app-bot-side>
